# witchcraft

./: .gitignore  Cargo.toml  Makefile  README-dash.md  README.md  downloadweights.py  install.cjs  nfcorpus-score.sh  quantize-int4.py  requirements.txt  scifact-score.sh  score.py
datasets/: nfcorpus.tsv.zst
examples/: pickbrain.rs
examples/pickbrain/: claude_code.rs  codex.rs  main.rs
skills/pickbrain/: SKILL.md
skills/pickbrain-codex/: SKILL.md
src/: assets.rs  bnns_t5.rs  claude-index.rs  claude_code.rs  db.rs  embedder.rs  fast_ops.rs  fused_matmul.rs  histogram.rs  lib.rs  main.rs  napi.rs  openvino_t5.rs  packops.rs  pickbrain.rs  progress_reporter.rs  quantize-tool.rs  quantized_t5.rs  t5.rs  tests.rs  warp.rs
src/bnns/: ffi.rs  mod.rs  types.rs
src/warp/: assets.rs  db.rs  embedder.rs  openvino_t5.rs  packops.rs  quantized_t5.rs  t5.rs  tests.rs
testset/nfcorpus/: collection_map.json.zst  qrels.test.json.zst  questions.test.tsv.zst
tools/: compare-spotlight-warp.sh
tools/t5-bench/: Cargo.toml
tools/t5-bench/src/: burn_t5.rs  main.rs
ts/: index.ts  warp.cjs
