[package]
name = "t5-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "t5-bench"
path = "src/main.rs"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev = "0.9.2-alpha.2" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "0.9.2-alpha.2" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "0.9.2-alpha.2" }
openvino = { version = "0.9.1", features = ["runtime-linking"], optional = true }
tokenizers = "*"
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
burn = { version = "0.16", default-features = false, optional = true }
burn-ndarray = { version = "0.16", features = ["std"], optional = true }
safetensors = { version = "0.4", optional = true }
zstd = "0.13.3"
tempfile = "3.20.0"

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
accelerate-src = { version = "0.3.2", optional = true }
libc = { version = "0.2.147", optional = true }

[features]
default = ["ov"]
ov = ["dep:openvino"]
burn-bench = ["dep:burn", "dep:burn-ndarray", "dep:safetensors"]
accelerate = ["dep:libc", "dep:accelerate-src", "candle-core/accelerate"]
